--- a/src/index.html
+++ b/src/index.html
@@ -56,6 +56,29 @@
         </div>
     </div>
 
+    <div class="advantages">
+        <div class="container">
+            <div class="advantages__header">НАШИ ПРЕИМУЩЕСТВА</div>
+            <div class="advantages__icons">
+                <div class="advantages__icon">
+                    <img src="icons/cup_icon.png" alt="cup">
+                    <span>Делимся опытом</span>
+                    Наши сотрудники всегда готовы поделиться своим опытом,<br>так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!
+                </div>
+                <div class="advantages__icon">
+                    <img src="icons/heart_icon.png" alt="heart">
+                    <span>Заботимся о здоровье</span>
+                    Мы работаем для того,<br>чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!
+                </div>
+                <div class="advantages__icon">
+                    <img src="icons/shoe_icon.png" alt="shoe">
+                    <span>Учим бегать</span>
+                    Помогаем с обучением<br>правильной технике бега!<br>Дружим с крупнейшей школой бега в России - <a href="#">I LOVE RUNNING</a>.
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="js/script.js"></script>
 </body>
 </html>
