v.0.2.5 (created a consultation component)

--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
 
     <div class="advantages">
         <div class="container">
-            <div class="advantages__header">НАШИ ПРЕИМУЩЕСТВА</div>
+            <div class="title">НАШИ ПРЕИМУЩЕСТВА</div>
             <div class="advantages__icons">
                 <div class="advantages__icon">
                     <img src="icons/cup_icon.png" alt="cup">
@@ -82,6 +82,27 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+
+    <div class="consultation">
+        <div class="container">
+            <h2 class="title title_left">
+                Получите бесплатную консультацию<br>
+                по подбору пульсометра
+            </h2>
+            <div class="consultation__descr">
+                Просто заполните форму заявки<br>
+                и мы перезвоним вам в течении 10 минут
+            </div>
+
+            <form class="feed-form" action="#">
+                <input name="name" required placeholder="Ваше имя" type="text">
+                <input name="phone" required placeholder="Ваш телефон" type="number">
+                <input name="email" required placeholder="Ваш E-mail" type="email">
+
+                <button class="button button_submit">заказать консультацию</button>
+            </form>
         </div>
     </div>
 
