v.0.6.5 (finished a reviews component)

--- a/src/index.html
+++ b/src/index.html
@@ -364,6 +364,50 @@
         </div>
     </section>
 
+    <section class="reviews">
+        <div class="container">
+            <h2 class="title">отзывы клиентов</h2>
+            <div class="reviews__wrapper">
+                <div class="reviews-item">
+                    <a href="#" class="reviews-item__img"><img src="img/avatars/avatar_1.png" alt="avatar"></a>
+                    <div class="reviews-item__text">
+                        <a href="#" class="reviews-item__header">Ирина Иванченко</a>
+                        <div class="reviews-item__subheader">2 полумарафона</div>
+                        <div class="reviews-item__descr">
+                            Не знала, что себе купить - обратилась к ребятам из RunSmart - подобрали пульсометр, который подошёл именно под мои цели и финансовые возможности.Через некоторое время решила обновить гаджет - не раздумывая обратилась туда же.
+                            <div>Новые цели - новый гаджет!</div>
+                            <div>Спасибо, RunSmart!</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="reviews-item">
+                    <a href="#" class="reviews-item__img"><img src="img/avatars/avatar_2.png" alt="avatar"></a>
+                    <div class="reviews-item__text">
+                        <a href="#" class="reviews-item__header">Иван Сёмочкин</a>
+                        <div class="reviews-item__subheader">1 полумарафон</div>
+                        <div class="reviews-item__descr">
+                            Крутая штука-пульсометр. Обычно без них бегал. Оказывается только хуже себе делал.<br>
+                            Купил пульсометр, ещё в подарок получил тренировку. Со мной вместе провели первую тренировку, научили пользоваться новым гаджетом. Также объяснили основы анатомии, составили план тренировок на месяц вперёд.<br>
+                            <div>С ними подготовился к своему первому полумарафону! Спасибо!!!</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="reviews-item">
+                    <a href="#" class="reviews-item__img"><img src="img/avatars/avatar_3.png" alt="avatar"></a>
+                    <div class="reviews-item__text">
+                        <a href="#" class="reviews-item__header">Юлия Дашкина</a>
+                        <div class="reviews-item__subheader">2 полумарафона</div>
+                        <div class="reviews-item__descr">
+                            Долго не могла начать бегать, т.к. до этого несколько раз начинала, но становилось тяжело и я бросала. От друзей услышала о RunSmart и о беге с контролем пульса и решила попробовать.
+                            <div>Позвонила, ребята поинтересовались моими целями и подобрали очень интересный вариант со скидкой! Теперь бегаю и наслаждаюсь бегом! Пробежала уже 2 полумарафона и несколько более коротких забегов и не намерена останавливаться!</div>
+                            <div>Спасибо!!!</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/slick.min.js"></script>
