--- a/src/index.html
+++ b/src/index.html
@@ -62,21 +62,21 @@
             <div class="title">НАШИ ПРЕИМУЩЕСТВА</div>
             <div class="advantages__icons">
                 <div class="advantages__icon">
-                    <img src="icons/cup_icon.png" alt="cup">
+                    <img class="advantages__icon_cup" src="icons/cup_icon.png" alt="cup">
                     <div class="advantages__descr">
                         <span>Делимся опытом</span>
                         Наши сотрудники всегда готовы поделиться своим опытом,<br>так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!
                     </div>
                 </div>
                 <div class="advantages__icon">
-                    <img src="icons/heart_icon.png" alt="heart">
+                    <img class="advantages__icon_heart" src="icons/heart_icon.png" alt="heart">
                     <div class="advantages__descr">
                         <span>Заботимся о здоровье</span>
                         Мы работаем для того,<br>чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!
                     </div>
                 </div>
                 <div class="advantages__icon">
-                    <img src="icons/shoe_icon.png" alt="shoe">
+                    <img class="advantages__icon_shoe" src="icons/shoe_icon.png" alt="shoe">
                     <div class="advantages__descr">
                         <span>Учим бегать</span>
                         Помогаем с обучением<br>правильной технике бега!<br>Дружим с крупнейшей школой бега в России - <a href="https://ilovesupersport.com/running">I LOVE RUNNING</a>.
